@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-29T01:07:06Z",
+  "timestamp" : "2022-07-29T08:14:47Z",
   "count_outdated" : 422,
   "uniques_outdated" : 228,
   "count" : 445,
-  "uniques" : 239,
+  "uniques" : 240,
   "clones" : [
     {
       "timestamp": "2022-07-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
